--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
   </style>
 </head>
 <body>
+<!-- 创建一个大标题 -->
+<h1 style="text-align: center;">文本转语音</h1>
+<!-- 创建一个小标题 -->
+<h2 style="text-align: center;">text to speech</h2>
   <!-- 创建一个文本输入框 -->
   <textarea id="text-input" placeholder="请输入要合成的文本"></textarea>
   <!-- 创建一个按钮容器 -->
